--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@ under the License.
         <module>hadoop-aws-shade-2</module>
         <module>kerby-shade-1.0</module>
         <module>hive-catalog-shade</module>
+        <module>lakesoul-common-shade</module>
     </modules>
 
     <properties>
